--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -11,7 +11,9 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('program_new') }}" class="btn btn-success mb-5" role="button">Créer</a>
+	{% if is_granted("ROLE_CONTRIBUTOR") %}
+		<a href="{{ path('program_new') }}" class="btn btn-success mb-5" role="button">Créer</a>
+	{% endif %}
 
 	<div class="accordion accordion-flush" id="programAccordion">
 		{% for program in programs %}
