--- a/templates/actor/_delete_form.html.twig
+++ b/templates/actor/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('actor_delete', {'slug': actor.slug}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet acteur ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actor.id) }}">
-	<button class="btn btn-danger mb-5">Supprimer</button>
+	<button class="btn btn-danger">Supprimer</button>
 </form>
