--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -7,8 +7,12 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('actor_edit', {'slug': actor.slug}) }}" class="btn btn-warning" role="button">Editer</a>
-	{{ include('actor/_delete_form.html.twig') }}
+	{% if is_granted("ROLE_CONTRIBUTOR") %}
+		<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+			<a href="{{ path('actor_edit', {'slug': actor.slug}) }}" class="btn btn-warning" role="button">Editer</a>
+			{{ include('actor/_delete_form.html.twig') }}
+		</div>
+	{% endif %}
 
 	<div class="row">
 		<div class="col-12 col-lg-8">
