--- a/templates/category/_delete_form.html.twig
+++ b/templates/category/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('category_delete', {'slug': category.slug}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette catégorie ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-	<button class="btn btn-danger mb-5">Supprimer</button>
+	<button class="btn btn-danger">Supprimer</button>
 </form>
