--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -11,7 +11,9 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('category_new') }}" class="btn btn-success mb-5" role="button">Créer</a>
+	{% if is_granted("ROLE_ADMIN") %}
+		<a href="{{ path('category_new') }}" class="btn btn-success mb-5" role="button">Créer</a>
+	{% endif %}
 
 	<ul class="list-group list-group-flush">
 		{% for category in categories %}
