--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -14,9 +14,13 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('category_edit', {'slug': category.slug}) }}" class="btn btn-warning" role="button">Editer</a>
-	{{ include('category/_delete_form.html.twig') }}
-	<div class="accordion accordion-flush" id="programAccordion">
+	{% if is_granted("ROLE_ADMIN") %}
+		<div class="btn-group me-2 flex-wrap mb-5" role="group" aria-label="First group">
+			<a href="{{ path('category_edit', {'slug': category.slug}) }}" class="btn btn-warning" role="button">Editer</a>
+			{{ include('category/_delete_form.html.twig') }}
+		</div>
+	{% endif %}
+	<div class="accordion accordion-flush mb-5" id="programAccordion">
 		{% for program in programs %}
 			<div class="accordion-item">
 				<h2 class="accordion-header" id="flush-heading-{{program.id}}">
