--- a/templates/program/_delete_form.html.twig
+++ b/templates/program/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('program_delete', {slug: program.slug}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette série ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ program.id) }}">
-	<button class="btn btn-danger mb-5">Supprimer</button>
+	<button class="btn btn-danger">Supprimer</button>
 </form>
