--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -7,8 +7,12 @@
 {% endblock %}
 
 {% block body %}
-	<a href="{{ path('program_edit', {slug: program.slug}) }}" class="btn btn-warning" role="button">Editer</a>
-	{{ include('program/_delete_form.html.twig') }}
+	{% if is_granted("ROLE_CONTRIBUTOR") and app.user == program.owner or is_granted("ROLE_ADMIN") %}
+		<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
+			<a href="{{ path('program_edit', {slug: program.slug}) }}" class="btn btn-warning" role="button">Editer</a>
+			{{ include('program/_delete_form.html.twig') }}
+		</div>
+	{% endif %}
 	<div class="row">
 		<div class="col-12 col-lg-8">
 			<div class="card my-5">
@@ -34,7 +38,9 @@
 					<p class="card-text">{{ program.summary }}</p>
 					<hr/>
 					<p class="h5">Saisons</p>
-					<a href="{{ path('season_new', {programSlug: program.slug}) }}" class="btn btn-success mb-5" role="button">Créer</a>
+					{% if is_granted("ROLE_CONTRIBUTOR") and app.user == program.owner or is_granted("ROLE_ADMIN") %}
+						<a href="{{ path('season_new', {programSlug: program.slug}) }}" class="btn btn-success mb-5" role="button">Créer</a>
+					{% endif %}
 					<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
 						<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
 							{% for season in seasons %}
