--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -21,11 +21,13 @@
 					<h2 class="card-title">Saison
 						{{ season.number }}</h2>
 					<p class="card-text">{{ season.year }}</p>
-					<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
-						<a href="{{ path('episode_new', { programSlug: program.slug, seasonSlug: season.slug }) }}" class="btn btn-success mb-5" role="button">Créer Episode</a>
-						<a href="{{ path("season_edit", { programSlug: program.slug, seasonSlug: season.slug }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
-						{{ include('season/_delete_form.html.twig') }}
-					</div>
+					{% if is_granted("ROLE_CONTRIBUTOR") and app.user == program.owner or is_granted("ROLE_ADMIN") %}
+						<div class="btn-group me-2 flex-wrap mb-2" role="group" aria-label="First group">
+							<a href="{{ path('episode_new', { programSlug: program.slug, seasonSlug: season.slug }) }}" class="btn btn-success" role="button">Créer Episode</a>
+							<a href="{{ path("season_edit", { programSlug: program.slug, seasonSlug: season.slug }) }}" class="btn btn-warning" role="button">Editer</a>
+							{{ include('season/_delete_form.html.twig') }}
+						</div>
+					{% endif %}
 					<div class="accordion accordion-flush" id="episodeAccordion">
 						{% for episode in season.episodes %}
 							<div class="accordion-item">
@@ -38,10 +40,12 @@
 								</h2>
 								<div id="flush-collapse-{{episode.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{episode.id}}" data-bs-parent="#accordionFlushExample">
 									<div class="accordion-body">
-										<div class="btn-group me-2 flex-wrap" role="group" aria-label="First group">
-											<a href="{{ path('episode_show', {programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug}) }}" class="btn btn-secondary mb-5" role="button">Voir</a>
-											<a href="{{ path('episode_edit', { programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug }) }}" class="btn btn-warning mb-5" role="button">Editer</a>
-											{{ include('episode/_delete_form.html.twig') }}
+										<div class="btn-group me-2 flex-wrap mb-3" role="group" aria-label="First group">
+											<a href="{{ path('episode_show', {programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug}) }}" class="btn btn-secondary" role="button">Voir</a>
+											{% if is_granted("ROLE_CONTRIBUTOR") and app.user == program.owner or is_granted("ROLE_ADMIN") %}
+												<a href="{{ path('episode_edit', { programSlug: program.slug, seasonSlug: season.slug, episodeSlug: episode.slug }) }}" class="btn btn-warning" role="button">Editer</a>
+												{{ include('episode/_delete_form.html.twig') }}
+											{% endif %}
 										</div>
 										<p>{{ episode.summary }}</p>
 									</div>
