--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -22,12 +22,17 @@
 				</ul>
 				{% if app.user %}
 					<span class="mx-2 text-light">
-						{{ app.user.username }}
+						<a href="{{ path('user_show', {'id': app.user.id}) }}">
+							{{ app.user.username }}
+						</a>
 					</span>
 					<a href="{{ path('app_logout') }}">
 						<i class="fas fa-sign-out-alt"></i>
 					</a>
 				{% else %}
+					<a href="{{ path('app_register') }}" class="text-decoration-none text-light">
+						S'enregistrer /
+					</a>
 					<a href="{{ path('app_login') }}" class="text-decoration-none">
 						<span class="mx-2 text-light">
 							Connexion
