--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,5 +39,9 @@
 		<button class="btn btn-lg btn-primary" type="submit">
 			Se connecter
 		</button>
+
 	</form>
+	<div class="mt-5">
+		<a href="{{ path('app_forgot_password_request') }}" class="text-muted">Mot de passe oublié</a>
+	</div>
 {% endblock %}
