--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -21,8 +21,8 @@
 					</li>
 				</ul>
 				{% if app.user %}
-					<span class="mx-2 text-light">
-						<a href="{{ path('user_show', {'id': app.user.id}) }}">
+					<span class="mx-2">
+						<a href="{{ path('user_show', {'id': app.user.id}) }}" class="text-decoration-none">
 							{{ app.user.username }}
 						</a>
 					</span>
@@ -30,11 +30,11 @@
 						<i class="fas fa-sign-out-alt"></i>
 					</a>
 				{% else %}
-					<a href="{{ path('app_register') }}" class="text-decoration-none text-light">
+					<a href="{{ path('app_register') }}" class="text-decoration-none">
 						S'enregistrer /
 					</a>
 					<a href="{{ path('app_login') }}" class="text-decoration-none">
-						<span class="mx-2 text-light">
+						<span class="mx-2">
 							Connexion
 						</span>
 						<i class="fas fa-sign-in-alt"></i>
