--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}
 	{{parent()}}
 	-
-								Page de profil
+	Page de profil
 {% endblock %}
 
 {% block page_title %}
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block body %}
-	<p>Ceci est une page de profile trèèèèès complète, attention.</p>
+	<p>Ceci est une page de profil trèèèèès complète, attention.</p>
 	<p>
 		<strong>Email</strong>
 		:
