--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,15 @@
 			{% include "_navbar.html.twig" %}
 		</header>
 		<div class="container">
+			{% for category, messages in app.flashes %}
+				{% for message in messages %}
+					<div class="alert alert-{{ category }} alert-dismissible fade show mt-3" role="alert">
+						{{ message }}
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				{% endfor %}
+			{% endfor %}
+
 			<div class="m-4"> {% block page_title %}{% endblock %}
 				</div>
 				{% block body %}{% endblock %}
