--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}
 	{{parent()}}
 	-
-	Page de profil
+														Page de profil
 {% endblock %}
 
 {% block page_title %}
@@ -13,12 +13,35 @@
 {% endblock %}
 
 {% block body %}
-	<p>Ceci est une page de profil trèèèèès complète, attention.</p>
-	<p>
-		<strong>Email</strong>
-		:
-		{{user.mail}}
-	</p>
+	<h3 class="mt-5">Watchlist</h3>
+	<div class="accordion accordion-flush" id="programAccordion">
+		{% for program in user.watchlist %}
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-heading-{{program.id}}">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-{{program.id}}" aria-expanded="false" aria-controls="flush-collapseOne">
+						{{ program.title }}
+					</button>
+				</h2>
+				<div id="flush-collapse-{{program.id}}" class="accordion-collapse collapse" aria-labelledby="flush-heading-{{program.id}}" data-bs-parent="#accordionFlushExample">
+					<div class="accordion-body">
+						<a href="{{ path("category_show", { slug: program.category.slug }) }}">
+							<span class="badge bg-light text-dark mb-4">
+								{{ program.category.name }}
+							</span>
+						</a>
+						<p>{{ program.summary }}</p>
+						<a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-secondary m-4" role="button">Voir la fiche</a>
+					</div>
+				</div>
+			</div>
+		{% else %}
+			<p class="m-5">
+				Aucune série trouvée.
+			</p>
+		{% endfor %}
+	</div>
+	<h3 class="mt-5">Adresse mail</h3>
+	{{user.mail}}
 	<div class="mt-5">
 		<a href="{{ path('app_forgot_password_request') }}" class="btn btn-primary">Mot de passe oublié</a>
 	</div>
