--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-12 col-lg-8">
 			<div class="card my-5">
-				<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-toggle="modal" data-bs-target="#imageModal" class="card-img-top" style="height: 40vh; object-fit: cover; object-position: center top">
+				<img src="{{ vich_uploader_asset(program) }}" alt="{{ program.title }}" type="button" data-bs-toggle="modal" data-bs-target="#imageModal" class="card-img-top" style="height: 40vh; object-fit: cover; object-position: center top">
 				<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
 						<div class="modal-content">
@@ -24,7 +24,7 @@
 								<h5 class="modal-title" id="imageModalLabel">{{ program.title }}</h5>
 								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
-							<img src="{{program.poster}}" alt="{{ program.title }}" type="button" data-bs-tclass="card-img-top">
+							<img src="{{ vich_uploader_asset(program) }}" alt="{{ program.title }}" type="button" data-bs-tclass="card-img-top">
 						</div>
 					</div>
 				</div>
