reorganised index + navbar twigs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header>
-			{% include "_navbar.html.twig" %}
+			{% include "navbar/_navbar.html.twig" %}
 		</header>
 		<div class="container">
 			{% for category, messages in app.flashes %}
