--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,4 +1,7 @@
 {% extends "base.html.twig" %}
 {% block body %}
-	{% include "index/_carousel.html.twig" %}
+	<div class="container">
+		{% include "index/_carousel.html.twig" %}
+		{% include "index/_watchlist.html.twig" %}
+	</div>
 {% endblock %}
