updated defaultcontroller to handle anon user index display

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -2,6 +2,8 @@
 {% block body %}
 	<div class="container">
 		{% include "index/_carousel.html.twig" %}
-		{% include "index/_watchlist.html.twig" %}
+		{% if app.user %}
+			{% include "index/_watchlist.html.twig" %}
+		{% endif %}
 	</div>
 {% endblock %}
